--- a/hypixelapi.lfm
+++ b/hypixelapi.lfm
@@ -1,266 +1,238 @@
 object Form1: TForm1
-  Left = 257
-  Height = 457
-  Top = 93
-  Width = 898
-  Caption = 'Hypixel API Checker v0.1'
-  ClientHeight = 457
-  ClientWidth = 898
-  DesignTimePPI = 120
-  OnCreate = FormCreate
+  Left = 577
+  Height = 259
+  Top = 77
+  Width = 552
+  Caption = 'HyAPI'
+  ClientHeight = 259
+  ClientWidth = 552
   LCLVersion = '2.0.10.0'
   object PageControl1: TPageControl
-    Left = 8
-    Height = 436
-    Top = 16
-    Width = 858
-    ActivePage = UserIdentityT
+    Left = 6
+    Height = 261
+    Top = 0
+    Width = 538
+    ActivePage = TabSheet1
+    ParentFont = False
     TabIndex = 0
     TabOrder = 0
-    object UserIdentityT: TTabSheet
-      Caption = 'User Identity'
-      ClientHeight = 403
-      ClientWidth = 850
-      object submit: TButton
-        Left = 8
-        Height = 31
-        Top = 80
-        Width = 94
-        Caption = 'Submit'
-        OnClick = submitClick
+    object TabSheet1: TTabSheet
+      Caption = 'Main Menu'
+      ClientHeight = 235
+      ClientWidth = 530
+      ParentFont = False
+      object tle: TLabeledEdit
+        Left = 6
+        Height = 21
+        Top = 26
+        Width = 96
+        EditLabel.Height = 13
+        EditLabel.Width = 96
+        EditLabel.Caption = 'Username'
+        EditLabel.ParentColor = False
+        EditLabel.ParentFont = False
+        ParentFont = False
         TabOrder = 0
+        OnChange = tleChange
       end
-      object text2: TLabel
-        Left = 8
-        Height = 20
-        Top = 8
-        Width = 66
-        Caption = 'Username'
-        ParentColor = False
-      end
-      object usernameEdit: TEdit
-        Left = 8
-        Height = 28
-        Top = 40
-        Width = 156
-        OnChange = usernameEditChange
-        ParentShowHint = False
-        ShowHint = True
+      object Button1: TButton
+        Left = 6
+        Height = 25
+        Top = 51
+        Width = 75
+        Caption = 'Submit'
+        OnClick = Button1Click
+        ParentFont = False
         TabOrder = 1
-        TextHint = 'Enter username'
+      end
+      object CheckBox1: TCheckBox
+        Left = 392
+        Height = 17
+        Top = 216
+        Width = 134
+        Caption = 'Show debug messages'
+        OnChange = CheckBox1Change
+        TabOrder = 2
       end
     end
-    object HypixelAPIInfoT: TTabSheet
-      Caption = 'Hypixel API Info'
-      ClientHeight = 403
-      ClientWidth = 850
-      object HAPITabs: TPageControl
-        Left = 8
-        Height = 370
-        Top = 8
-        Width = 832
-        ActivePage = GeneralStatsT
+    object TabSheet2: TTabSheet
+      Caption = 'Infomation'
+      ClientHeight = 235
+      ClientWidth = 530
+      ParentFont = False
+      object PageControl2: TPageControl
+        Left = 0
+        Height = 224
+        Top = 0
+        Width = 528
+        ActivePage = TabSheet3
+        ParentFont = False
         TabIndex = 0
         TabOrder = 0
-        object GeneralStatsT: TTabSheet
-          Caption = 'General Stats'
-          ClientHeight = 337
-          ClientWidth = 824
-          object mostRecentGame: TLabel
-            Left = 165
-            Height = 1
-            Top = 104
-            Width = 1
-            ParentColor = False
-          end
-          object NetworkLevelSL: TLabel
-            Left = 8
-            Height = 20
-            Top = 32
-            Width = 94
-            Caption = 'Network level:'
-            ParentColor = False
-          end
-          object RankSL: TLabel
-            Left = 8
-            Height = 20
-            Top = 8
-            Width = 35
+        object TabSheet3: TTabSheet
+          Caption = 'General Infomation'
+          ClientHeight = 198
+          ClientWidth = 520
+          ParentFont = False
+          object Label1: TLabel
+            Left = 6
+            Height = 13
+            Top = 6
+            Width = 28
             Caption = 'Rank:'
             ParentColor = False
+            ParentFont = False
           end
-          object mostRecentGameSL: TLabel
-            Left = 8
-            Height = 20
-            Top = 104
-            Width = 150
-            Caption = 'Recently played game:'
-            ParentColor = False
-          end
-          object networkLevel: TLabel
-            Left = 104
+          object Label2: TLabel
+            Left = 38
             Height = 1
-            Top = 32
+            Top = 6
+            Width = 1
+            ParentColor = False
+            ParentFont = False
+          end
+          object mostRecentGame: TLabel
+            Left = 80
+            Height = 1
+            Top = 24
             Width = 1
             ParentColor = False
           end
-          object RankL: TLabel
-            Left = 48
-            Height = 1
-            Top = 8
-            Width = 1
+          object Label3: TLabel
+            Left = 6
+            Height = 13
+            Top = 24
+            Width = 69
+            Caption = 'Recent game:'
             ParentColor = False
           end
-          object JoinedOnST: TLabel
-            Left = 8
-            Height = 20
-            Top = 56
-            Width = 67
+          object Label4: TLabel
+            Left = 6
+            Height = 13
+            Top = 40
+            Width = 52
             Caption = 'Joined on:'
             ParentColor = False
           end
-          object JoinedOnL: TLabel
-            Left = 80
+          object joinedOn: TLabel
+            Left = 64
+            Height = 1
+            Top = 40
+            Width = 1
+            ParentColor = False
+          end
+          object Label5: TLabel
+            Left = 6
+            Height = 13
+            Top = 56
+            Width = 52
+            Caption = 'Last login:'
+            ParentColor = False
+          end
+          object lastLogin: TLabel
+            Left = 64
             Height = 1
             Top = 56
             Width = 1
             ParentColor = False
           end
-          object lastLoginSL: TLabel
+          object Label6: TLabel
             Left = 8
-            Height = 20
-            Top = 80
-            Width = 67
-            Caption = 'Last login:'
+            Height = 13
+            Top = 72
+            Width = 73
+            Caption = 'Network level:'
             ParentColor = False
           end
-          object lastLoginL: TLabel
-            Left = 80
+          object networkLV: TLabel
+            Left = 88
             Height = 1
-            Top = 80
+            Top = 72
             Width = 1
             ParentColor = False
           end
         end
-        object GuildStatsT: TTabSheet
-          Caption = 'Guild Stats'
-          ClientHeight = 337
-          ClientWidth = 824
-          object GNameST: TLabel
+        object TabSheet4: TTabSheet
+          Caption = 'Guild Infomation'
+          ClientHeight = 198
+          ClientWidth = 520
+          ParentFont = False
+          object Label7: TLabel
             Left = 8
-            Height = 20
+            Height = 13
             Top = 8
-            Width = 79
+            Width = 61
             Caption = 'Guild name:'
             ParentColor = False
           end
-          object GLevelST: TLabel
-            Left = 8
-            Height = 20
-            Top = 32
-            Width = 73
-            Caption = 'Guild level:'
-            ParentColor = False
-          end
-          object GNameL: TLabel
-            Left = 87
+          object guildName: TLabel
+            Left = 72
             Height = 1
             Top = 8
             Width = 1
             ParentColor = False
           end
-          object GLevelL: TLabel
-            Left = 83
+          object Label9: TLabel
+            Left = 8
+            Height = 13
+            Top = 24
+            Width = 68
+            Caption = 'Guild master:'
+            ParentColor = False
+          end
+          object Label8: TLabel
+            Left = 8
+            Height = 13
+            Top = 40
+            Width = 57
+            Caption = 'Guild level:'
+            ParentColor = False
+          end
+          object Label10: TLabel
+            Left = 8
+            Height = 13
+            Top = 56
+            Width = 52
+            Caption = 'Guild EXP:'
+            ParentColor = False
+          end
+          object guildLV: TLabel
+            Left = 72
             Height = 1
-            Top = 32
+            Top = 40
             Width = 1
             ParentColor = False
           end
-          object gCreatedOnSL: TLabel
-            Left = 8
-            Height = 20
-            Top = 55
-            Width = 76
-            Caption = 'Created on:'
+          object guildEXP: TLabel
+            Left = 64
+            Height = 1
+            Top = 56
+            Width = 1
             ParentColor = False
           end
-          object gCreatedOnL: TLabel
-            Left = 88
+          object gMaster: TLabel
+            Left = 80
             Height = 1
-            Top = 55
+            Top = 24
+            Width = 1
+            ParentColor = False
+          end
+          object Label11: TLabel
+            Left = 8
+            Height = 13
+            Top = 72
+            Width = 50
+            Caption = 'Guild tag:'
+            ParentColor = False
+          end
+          object gTag: TLabel
+            Left = 64
+            Height = 1
+            Top = 72
             Width = 1
             ParentColor = False
           end
         end
-      end
-    end
-    object Credits: TTabSheet
-      Caption = 'Credits'
-      ClientHeight = 403
-      ClientWidth = 850
-      object pname: TLabel
-        Left = 8
-        Height = 20
-        Top = 8
-        Width = 162
-        Caption = 'Hypixel API Checker v0.1'
-        ParentColor = False
-      end
-      object authorname: TLabel
-        Left = 80
-        Height = 20
-        Top = 40
-        Width = 328
-        Caption = 'SkilledHasBadPC, icon made by DiamondDisaster'
-        ParentColor = False
-      end
-      object message1: TLabel
-        Left = 8
-        Height = 20
-        Top = 40
-        Width = 61
-        Caption = 'Made by:'
-        ParentColor = False
-      end
-      object message4: TLabel
-        Left = 8
-        Height = 20
-        Top = 72
-        Width = 88
-        Caption = 'Known bugs: '
-        ParentColor = False
-      end
-      object message6: TLabel
-        Left = 104
-        Height = 20
-        Top = 72
-        Width = 485
-        Caption = 'Mojang API sometimes does not respond to httpclient, deemed unfixable'
-        ParentColor = False
-      end
-      object message7: TLabel
-        Left = 8
-        Height = 20
-        Top = 104
-        Width = 76
-        Caption = 'Limitations:'
-        ParentColor = False
-      end
-      object message8: TLabel
-        Left = 104
-        Height = 20
-        Top = 104
-        Width = 410
-        Caption = '120 requests every minute, limitation made by the Hypixel API'
-        ParentColor = False
-      end
-      object message9: TLabel
-        Left = 104
-        Height = 20
-        Top = 136
-        Width = 440
-        Caption = 'Mojang API''s 600 request per 10 minutes, made by the Mojang API'
-        ParentColor = False
       end
     end
   end
